Thu Jul 22 16:04:14 1993  Kevin Layer  (layer at sole)

	* Makefile.fi: local rdist rules; new rules for makeman, et al

	* clman.c, clman.h, clmanaux.c, makeman.c

	* fi-clman.el: use new clman.data, if it exists

	* fi-indent.el: &env -> &environment

	* fi-lemacs.el: redesign menus, looks better but still not done

	* fi-utils.el: fi::get-default-symbol looks at new variable,
	fi::use-symbol-at-point, to determine whether the user is asked
	for a symbol--mode-specific menus bind this to `t'.

	* fi-leep.el: push forms onto fi::initialization-forms that need
	to be eval'd at interface startup time

	* fi-site-init.el: new variable, fi::initialization-forms, used to
	store forms during loading that need to be evaluated at interface
	startup time.

Wed Jul 14 16:58:12 1993  Kevin Layer  (layer at sole)

	* Makefile: add fi-emacs19.elc

	* fi-emacs19.el: stub file, for now

>>>	* fi-keys.el: fix require of 'tags; add fi:uncomment-region

	* fi-lemacs.el: lots of additions, still work in-progress

	* fi-lep.el: when m-. is done, tell what is being searched for

	* fi-site-init.el: load only one of fi-lemacs or fi-emacs19

	* fi-subproc.el: set fi::common-lisp-first-time even when
	non-interactive.

	* fi-utils.el: the "get default symbol" function now behaves
	differently when m-. called from a menu.

Tue Jul 13 11:46:44 1993  Kevin Layer  (layer@sole)

	* Makefile: add fi-lemacs.el

>>>	* UserGuide.n: add fi:package, fi:default-package,
	fi:restart-common-lisp

	* fi-basic-lep.el: fix fi::show-some-text-1 per cer (comment added
	to describe the problem)

	* fi-indent.el: install fix for fi:lisp-semicolon;
	fi::make-request indent spec; fix to 4/28/92 fix for aborting the
	application of an indent spec--the old fix made some things indent
	badly, the new fix seems better.

	* fi-lep.el: fi:bug-report is more verbose (include info on eli
	version, etc); when quit is typed and we are doing a completion,
	kill the process we started on the lisp side.
